# smdiff

./: Cargo.toml  README.md  spec.md
smdiff-common/: Cargo.toml
smdiff-common/src/: lib.rs
smdiff-decoder/: Cargo.toml  README.md
smdiff-decoder/src/: lib.rs  reader.rs
smdiff-encoder/: Cargo.toml  README.md  build.rs
smdiff-encoder/src/: add.rs  copy.rs  encoder.rs  hash.rs  hasher.rs  hashmap.rs  lib.rs  micro_encoder.rs  op_maker.rs  run.rs  scanner.rs  sequence.rs  src_matcher.rs  suffix.rs  trgt_matcher.rs  window_encoder.rs  writer.rs
smdiff-merger/: Cargo.toml  README.md
smdiff-merger/src/: lib.rs  transcoder.rs
smdiff-reader/: Cargo.toml
smdiff-reader/src/: lib.rs
smdiff-testing/: Cargo.toml  README.md
smdiff-testing/src/: gcc_tests.rs  main.rs  merge_test.rs  params.rs  sec_comp.rs  size_tests.rs  vc_to_sm.rs
smdiff-vcdiff/: Cargo.toml  README.md
smdiff-vcdiff/src/: lib.rs
smdiff-writer/: Cargo.toml
smdiff-writer/src/: lib.rs
