[package]
name = "smdiff-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smdiff-common ={ path = "../smdiff-common" }
smdiff-reader ={ path = "../smdiff-reader" }
zstd = "0.13.1"
ruzstd = "0.6.0"
brotlic = "0.8.2"