[package]
name = "smdiff-decoder"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ThinkingJoules/smdiff"
description = "A pure Rust implementation for a SMDIFF decoder."
license = "MIT"
keywords = ["smdiff", "delta", "patch", "delta-encoding", "delta-compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
smdiff-common ={ version = "0.5.0", path = "../smdiff-common" }
smdiff-reader ={ version = "0.5.0", path = "../smdiff-reader" }
ruzstd = "0.7.0"
brotlic = "0.8.2"