[package]
name = "smdiff-encoder"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smdiff-common ={ path = "../smdiff-common" }
smdiff-writer ={ path = "../smdiff-writer" }
rustc-hash = "1.1.0"
bloomfilter = "1.0.13"

