[package]
name = "smdiff-encoder"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
parallel = ["rayon"]

[dependencies]
smdiff-common = { path = "../smdiff-common" }
smdiff-writer = { path = "../smdiff-writer" }
zstd = "0.13.1"
brotlic = "0.8.2"
blake3 = { version = "1.5.1" }
log = "0.4.21"
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
simple_logger = { version = "5.0.0", features = ["threads"] }

