[package]
name = "smdiff-encoder"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ThinkingJoules/smdiff"
description = "A library for generating SMDIFF delta patches."
license = "MIT"
keywords = ["smdiff", "delta", "patch", "delta-encoding", "delta-compression"]
categories = ["compression","encoding","decoding"]


[dependencies]
smdiff-common = { version = "0.5.0", path = "../smdiff-common" }
smdiff-writer = { version = "0.5.0", path = "../smdiff-writer" }
zstd = "0.13.1"
brotlic = "0.8.2"
#log = "0.4.21"

[dev-dependencies]
#simple_logger = { version = "5.0.0" }

