[package]
name = "smdiff-merger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smdiff-common ={ path = "../smdiff-common" }
smdiff-reader ={ path = "../smdiff-reader" }
smdiff-decoder ={ path = "../smdiff-decoder" }
smdiff-writer ={ path = "../smdiff-writer" }

[dev-dependencies]