[package]
name = "smdiff-merger"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/ThinkingJoules/smdiff"
description = "A library for merging SMDIFF delta files together."
license = "MIT"
keywords = ["smdiff", "delta", "patch", "delta-encoding", "delta-compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
smdiff-common ={ version = "0.5.0", path = "../smdiff-common" }
smdiff-reader ={ version = "0.5.0", path = "../smdiff-reader" }
smdiff-writer ={ version = "0.5.0", path = "../smdiff-writer" }
smdiff-decoder ={ version = "0.5.0", path = "../smdiff-decoder" }
smdiff-encoder ={ version = "0.2.0", path = "../smdiff-encoder" }

[dev-dependencies]