[package]
name = "smdiff-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smdiff-vcdiff ={ path = "../smdiff-vcdiff" }
smdiff-common ={ path = "../smdiff-common" }
smdiff-reader ={ path = "../smdiff-reader" }
smdiff-encoder ={ path = "../smdiff-encoder" }
smdiff-decoder ={ path = "../smdiff-decoder" }
smdiff-merger ={ path = "../smdiff-merger" }
rand = "0.8.5"
colored = "2.1.0"
