[package]
name = "smdiff-vcdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vcdiff-reader = "1.0.0"
smdiff-common ={ version = "0.5.0", path = "../smdiff-common" }
smdiff-writer ={ version = "0.5.0", path = "../smdiff-writer" }
vcdiff-common = "1.0.0"
