[package]
name = "smdiff-vcdiff"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ThinkingJoules/smdiff"
description = "A library for translating VCDIFF deltas to SMDIFF deltas"
license = "MIT"
keywords = ["smdiff", "vcdiff", "delta", "patch","delta-compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
vcdiff-reader = "1.0.0"
smdiff-common ={ version = "0.5.0", path = "../smdiff-common" }
smdiff-writer ={ version = "0.5.0", path = "../smdiff-writer" }
vcdiff-common = "1.0.0"
