[package]
name = "smdiff-writer"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ThinkingJoules/smdiff"
description = "A library for constructing valid SMDIFF files (not an encoder)."
license = "MIT"
keywords = ["smdiff", "delta", "patch", "delta-encoding", "delta-compression"]
categories = ["compression","encoding","decoding"]

[dependencies]
smdiff-common ={ version = "0.5.0", path = "../smdiff-common" }